style: fix blockquote in dark mode

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -9,6 +9,11 @@
   width: 100%;
 }
 
+html.dark .prose blockquote {
+  color: #fff;
+  width: 100%;
+}
+
 html:not(.dark) .prose {
   --prism-foreground: #393a34;
   --prism-background: #fbfbfb;
